[24/5] api artist management