@@ -6,8 +6,10 @@ import com.vanvan.musicapp.request.UpdateUserStatusRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,9 +18,12 @@ public class UserService {
     private final UserRepository userRepository;
 
     public List<User> getAllCustomers() {
-        return userRepository.findAll().stream()
+        List<User> customers = userRepository.findAll().stream()
                 .filter(user -> user.getRole().equals(com.vanvan.musicapp.Enum.Role.CUSTOMER))
-                .toList();
+                .collect(Collectors.toList());
+
+        Collections.reverse(customers);
+        return customers;
     }
 
     public Optional<User> findByEmail(String email) {
